--- a/src/login/model/templates/codigo.tmpl
+++ b/src/login/model/templates/codigo.tmpl
@@ -4,7 +4,7 @@
 </head>
 <body>
     <p>{{ usuario.nombre }} {{usuario.apellido}}</p>
-    <p>Usando el dni {{ usuario.dni }} dentro del sistema de recupero de contraseña,</p>
+    <p>Usando su dni {{ usuario.dni }} dentro del sistema de recupero de contraseña,</p>
     <p>se ha generado un código que permite resetear su clave</p>
     <p>Código: {{ codigo }}</p>
     <p>No responda este correo ya que es un correo automático</p>
